# censo-argentino-qgis

./: .gitignore  .pre-commit-config.yaml  .qgis-plugin-ci  CLAUDE.md  DOCS.md  LICENSE  README.md  RELEASING.md  __init__.py  dialog.py  dialog.ui  metadata.txt  mkdocs.yml  plugin.py  pyproject.toml  query.py  query_builders.py  requirements-dev.txt  requirements.txt  validation.py  vulture_whitelist.py
.claude/hooks/: before-commit.sh  before-edit.sh  before-test.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_issue.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
censo_argentino_qgis/: __init__.py  config.py  dialog.py  dialog.ui  metadata.txt  plugin.py  query.py  query_builders.py  validation.py
censo_argentino_qgis/data/: geocodes.parquet  metadata.parquet
docs/: CHANGELOG.md  contribuir.md  desarrollo.md  guia-usuario.md  index.md  inicio-rapido.md  instalacion.md  solucion-problemas.md  sql.md
docs/examples/: basico.md
plans/: fix-census-aggregation-category-expansion.md
scripts/: bump_version.py  regenerate_bundled_data.py
tests/: __init__.py  conftest.py  test_ambiguous_columns.py  test_benchmarks.py  test_cache.py  test_config.py  test_dialog_imports.py  test_integration.py  test_profiling.py  test_query_builders.py  test_sanitization.py  test_validation.py
