[project]
name = "censo-argentino-qgis"
version = "0.1.0"
description = "Plugin de QGIS para cargar datos del censo argentino desde Source.Coop"
authors = [
    {name = "Nissim Lebovits", email = "nlebovits@pm.me"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

# This is a QGIS plugin, not a Python package
# Documentation is built with MkDocs as a uv tool:
#   uv tool install mkdocs --with mkdocs-material --with pymdown-extensions
#   uv tool run mkdocs serve  # Dev server at http://127.0.0.1:8000
#   uv tool run mkdocs build  # Build to site/ directory
